--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+    android:id="@+id/deleteMessages"
+    android:text="Delete backed up messages"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
