--- a/roomdatabase/src/main/res/layout/recycle_view_item.xml
+++ b/roomdatabase/src/main/res/layout/recycle_view_item.xml
@@ -7,18 +7,23 @@
     <TextView
         android:id="@+id/msg_id"
         android:textColor="@android:color/black"
+        android:text="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/name"
         android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:text="fahad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/msg"
         android:textColor="@android:color/black"
+        android:text="My first message"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -26,17 +31,20 @@
         android:id="@+id/state"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
+        android:text="sent"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/time"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
+        android:text="123:123"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/folder_name"
         android:textColor="@android:color/black"
+        android:text="inbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -45,6 +53,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+
         android:background="@color/grayColor" />
 
 
